skeleton of recipe controller

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -5,4 +5,5 @@
 {% block body %}
 <h1>Jarvis</h1>
 <p>Le compagnon du menu et des courses</p>
+<a href="{{ path('recipe_index') }}">Recettes</a>
 {% endblock %}
