create aliment and skeleton aliment controller

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DefaultController!{% endblock %}
+{% block title %}JARVIS{% endblock %}
 
 {% block body %}
 <h1>Jarvis</h1>
 <p>Le compagnon du menu et des courses</p>
 <a href="{{ path('recipe_index') }}">Recettes</a>
+<a href="{{ path('aliment_index') }}">Aliments</a>
 {% endblock %}
