create skeleton of menuController

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -7,4 +7,5 @@
 <p>Le compagnon du menu et des courses</p>
 <a href="{{ path('recipe_index') }}">Recettes</a>
 <a href="{{ path('aliment_index') }}">Aliments</a>
+<a href="{{ path('menu_index') }}">Menus</a>
 {% endblock %}
