--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -6,6 +6,10 @@
     <a href="{{ path('menu_new') }}">Créer un nouveau menu</a>
     <h2>Liste des menus</h2>
     {% for menu in menus %}
-        <div>Menu n°{{ menu.id }} du {{ menu.startedAt|date("d/m/Y") }} au {{ menu.finishedAt|date("d/m/Y") }}</div>
+        <a href="{{ path('menu_show', {'id': menu.id}) }}">
+            <div>
+                Menu n°{{ menu.id }} du {{ menu.startedAt|date("d/m/Y") }} au {{ menu.finishedAt|date("d/m/Y") }}
+            </div>
+        </a>
     {% endfor %}
 {% endblock %}
