--- a/templates/menu/new.html.twig
+++ b/templates/menu/new.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Créer un nouveau menu{% endblock %}
 
 {% block body %}
+    <a href="{{ path('menu_index') }}">Retourner à la liste des menus</a>
     <h2>Créer un nouveau menu</h2>
     {{ form_start(form) }}
     {{ form_row(form.startedAt) }}
