--- a/templates/menu/show.html.twig
+++ b/templates/menu/show.html.twig
@@ -10,8 +10,12 @@
         <div class="d-flex flex-column">
             {% for shift in menu.shifts|slice( i*2,2)  %}
                 <div class="p-3">
-                    <div>{{ shift.identifier }}</div>
-                    <a href="{{ path('recipe_show', {'id': shift.recipe.id}) }}">{{ shift.recipe.title }}</a>
+                    {% if shift.recipe %}
+                        <div>{{ shift.identifier }}</div>
+                        <a href="{{ path('recipe_show', {'id': shift.recipe.id}) }}">{{ shift.recipe.title }}</a>
+                    {% else %}
+                        ---
+                    {% endif %}
                 </div>
             {% endfor %}
         </div>
