create navbar and front

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
         {% endblock %}
     </head>
     <body>
-        {% block navbar %}xxxxxxxxxxxxxxxxxxxx{% endblock %}
+        {% block navbar %}{% include 'component/_navbar.html.twig' %}{% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
