--- a/templates/component/_navbar.html.twig
+++ b/templates/component/_navbar.html.twig
@@ -3,15 +3,30 @@
     <button class="navbar-toggler btn-secondary" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><i class="fas fa-sort-down text-primary"></i></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="d-flex flex-column justify-content-center">
-        <div class="d-flex justify-content-around">
-            <a class="text-primary btn btn-light p-2" href="{{ path('recipe_index') }}">Recettes</a>
-            <a class="text-primary btn btn-light p-2" href="{{ path('aliment_index') }}">Aliments</a>
-            <a class="text-primary btn btn-light p-2" href="{{ path('menu_index') }}">Menus</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto align-items-center">
+                <li class="nav-item active">
+                    <a class="nav-link text-primary btn btn-light p-2 m-3" href="{{ path('recipe_index') }}">Recettes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-primary btn btn-light p-2 m-3" href="{{ path('aliment_index') }}">Aliments</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-primary btn btn-light p-2 m-3" href="{{ path('menu_index') }}">Menus</a>
+                </li>
+                <li>
+                    <a class="nav-link btn btn-secondary text-primary font-weight-bold p-3 m-3" href="{{ path('menu_new') }}">Créer un menu</a>
+                </li>
+            </ul>
         </div>
-        <a class="btn btn-secondary my-4 mx-auto text-primary font-weight-bold p-3 w-50" href="{{ path('menu_new') }}">Créer un menu</a>
-        </div>
-        </div>
+        {#<div class="d-flex flex-wrap justify-content-center">
+            <div class="d-flex justify-content-around">
+                <a class="text-primary btn btn-light p-2" href="{{ path('recipe_index') }}">Recettes</a>
+                <a class="text-primary btn btn-light p-2" href="{{ path('aliment_index') }}">Aliments</a>
+                <a class="text-primary btn btn-light p-2" href="{{ path('menu_index') }}">Menus</a>
+            </div>
+            <a class="btn btn-secondary my-4 mx-auto text-primary font-weight-bold p-3 w-50" href="{{ path('menu_new') }}">Créer un menu</a>
+        </div>#}
+    </div>
 </nav>
