--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}JARVIS{% endblock %}
+{% block title %}On mange quoi c'soir ?{% endblock %}
 {% block navbar %}{% endblock %}
 {% block body %}
-    <div class="home-page d-flex flex-column align-items-center justify-content-center flex-wrap pb-5">
+    <div class="home-page d-flex flex-column align-items-center justify-content-center pb-3">
         <div class="d-flex align-items-center justify-content-center flex-wrap">
-            <a class="text-primary p-4 btn btn-light m-4" href="{{ path('recipe_index') }}">Recettes</a>
-            <a class="text-primary p-4 btn btn-light m-4" href="{{ path('aliment_index') }}">Aliments</a>
-            <a class="text-primary p-4 btn btn-light m-4" href="{{ path('menu_index') }}">Menus</a>
+            <a class="text-primary p-4 btn btn-light m-2" href="{{ path('recipe_index') }}">Recettes</a>
+            <a class="text-primary p-4 btn btn-light m-2" href="{{ path('aliment_index') }}">Aliments</a>
+            <a class="text-primary p-4 btn btn-light m-2" href="{{ path('menu_index') }}">Menus</a>
         </div>
-        <div class="text-center my-5">
-            <h1>Jarvis</h1>
+        <div class="text-center mt-4 mb-5">
+            <h1 class="text-break">On mange quoi c'soir ?</h1>
             <p>Un menu, Une liste de courses</p>
         </div>
         <div class="d-flex align-items-center justify-content-around mb-5">
