recipe index front

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -8,3 +8,4 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/brands';
 @import "global";
 @import "homepage";
+@import "recipe-index";
