--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -9,3 +9,4 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import "global";
 @import "homepage";
 @import "recipe-index";
+@import "recipe-show";
