--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -3,14 +3,22 @@
 {% block title %}{{ recipe.title }}{% endblock %}
 
 {% block body %}
-    <a href="{{ path('recipe_index') }}">Retour à la liste des recettes</a>
-    <h2>{{ recipe.title }}</h2>
-    <h4>Ingrédients</h4>
-    <ul>
-        {% for ingredient in recipe.ingredients %}
-            <li>{{ ingredient.aliment.name }} - qté : {{ ingredient.quantity }}</li>
-        {% endfor %}
-    </ul>
-    <h4>Déroulé de la recette</h4>
-    <p>{{ recipe.description }}</p>
+    <a class="p-2" href="{{ path('recipe_index') }}">Retour à la liste des recettes</a>
+    <h4 class="text-center my-4">{{ recipe.title }}</h4>
+    <div class="container">
+        <div class="row justify-content-center m-0">
+            <div class="col-12 col-md-5 recipe-ingredient-box alert alert-secondary my-3 mx-2">
+                <h5 class="text-center mb-3"><i class="fas fa-carrot mr-2"></i> Ingrédients</h5>
+                <ul>
+                    {% for ingredient in recipe.ingredients %}
+                        <li>{{ ingredient.aliment.name }} - qté : {{ ingredient.quantity }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="col-12 col-md-5 recipe-description-box alert alert-secondary my-3 mx-2">
+                <h5 class="text-center mb-3"><i class="fas fa-list-ol mr-2"></i> Déroulé de la recette</h5>
+                <p>{{ recipe.description }}</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
