recipe new front

--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     <h4 class="text-center py-2">Liste des recettes</h4>
+    <div class="text-center"><a class="my-3 btn btn-primary" href="{{ path('recipe_new') }}">Rédiger une nouvelle recette</a></div>
     <div class="container">
         <div class="row justify-content-center">
             {% for recipe in recipes %}
