improve algo for shopping list and front

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -10,3 +10,4 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import "homepage";
 @import "recipe-index";
 @import "recipe-show";
+@import "shopping-list";
