create Unit entity and improve fixtures

--- a/templates/aliment/index.html.twig
+++ b/templates/aliment/index.html.twig
@@ -7,7 +7,7 @@
     <div class="text-center"><a class="btn btn-primary my-4" href="{{ path('aliment_new') }}">Ajouter un nouvel aliment</a></div>
     <div class="container border text-center w-75 mx-auto rounded-lg my-2">
         {% for aliment in aliments %}
-            <div class="my-2">{{ aliment.name }}</div>
+            <div class="my-2">- {{ aliment.name }} ({{ aliment.unit.name }})</div>
         {% endfor %}
     </div>
 {% endblock %}
