--- a/templates/aliment/new.html.twig
+++ b/templates/aliment/new.html.twig
@@ -9,6 +9,7 @@
         {{ form_start(form) }}
         {{ form_row(form.name) }}
         {{ form_row(form.category) }}
+        {{ form_row(form.unit) }}
         <div class="text-center"><input class="btn btn-primary" type="submit" value="Ajouter"></div>
         {{ form_end(form) }}
     </div>
