--- a/templates/menu/show.html.twig
+++ b/templates/menu/show.html.twig
@@ -9,13 +9,14 @@
         <a class="btn btn-primary" href="{{ path('shoppingList', {'menu_id': menu.id}) }}">Générer la liste de courses</a>
     </div>
     <div class="d-flex flex-wrap justify-content-center">
-    {% for i in 0..6 %}
+    {% for nb_jours in constant('App\\Entity\\Menu::NB_MIN_DAY')..constant('App\\Entity\\Menu::NB_MAX_DAY') %}
         <div class="d-flex flex-column alert alert-primary mx-1">
-            {% for shift in menu.shifts|slice( i*2,2)  %}
+            {% for shift in menu.shifts|slice( nb_jours * 2, constant('App\\Entity\\Menu::NB_SHIFT_PER_DAY'))  %}
                 <div class="p-3 my-1 alert alert-light text-center">
                     {% if shift.recipe %}
-                        <div class="font-weight-bold">{{ shift.identifier }}</div>
+                        <div class="font-weight-bold mb-2">{{ shift.identifier }}</div>
                         <a href="{{ path('recipe_show', {'id': shift.recipe.id}) }}">{{ shift.recipe.title }}</a>
+                        <p class="mt-3">pour {{ shift.peopleCount }} personnes</p>
                     {% else %}
                         <div class="font-weight-bold">{{ shift.identifier }}</div>
                         <p>---</p>
