add icons in navbar

--- a/templates/component/_navbar.html.twig
+++ b/templates/component/_navbar.html.twig
@@ -7,16 +7,25 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto align-items-center">
                 <li class="nav-item">
-                    <a class="nav-link text-primary btn btn-light p-2 m-3" href="{{ path('aliment_index') }}">Aliments</a>
+                    <a class="nav-link text-primary btn btn-secondary p-2 m-3" href="{{ path('aliment_index') }}">
+                        <i class="fas fa-pepper-hot mr-1"></i>
+                        Aliments
+                    </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link text-primary btn btn-light p-2 m-3" href="{{ path('recipe_index') }}">Recettes</a>
+                    <a class="nav-link text-primary btn btn-secondary p-2 m-3" href="{{ path('recipe_index') }}">
+                        <i class="fas fa-book mr-1"></i>
+                        Recettes
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-primary btn btn-light p-2 m-3" href="{{ path('menu_index') }}">Menus</a>
+                    <a class="nav-link text-primary btn btn-secondary p-2 m-3" href="{{ path('menu_index') }}">
+                        <i class="fas fa-table mr-1"></i>
+                        Menus
+                    </a>
                 </li>
                 <li>
-                    <a class="nav-link btn btn-secondary text-primary font-weight-bold p-3 m-3" href="{{ path('menu_new') }}">Créer un menu</a>
+                    <a class="nav-link btn btn-light text-primary font-weight-bold p-3 m-3" href="{{ path('menu_new') }}"><i class="fas fa-scroll mr-2"></i>Créer un menu</a>
                 </li>
             </ul>
         </div>
