--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -5,16 +5,25 @@
 {% block body %}
     <div class="home-page d-flex flex-column align-items-center justify-content-center pb-3">
         <div class="d-flex align-items-center justify-content-center flex-wrap">
-            <a class="text-primary p-4 btn btn-light m-2" href="{{ path('aliment_index') }}">Aliments</a>
-            <a class="text-primary p-4 btn btn-light m-2" href="{{ path('recipe_index') }}">Recettes</a>
-            <a class="text-primary p-4 btn btn-light m-2" href="{{ path('menu_index') }}">Menus</a>
+            <a class="text-primary p-2 btn btn-light m-2" href="{{ path('aliment_index') }}">
+                <i class="fas fa-pepper-hot mr-1"></i>
+                Aliments
+            </a>
+            <a class="text-primary p-2 btn btn-light m-2" href="{{ path('recipe_index') }}">
+                <i class="fas fa-book mr-1"></i>
+                Recettes
+            </a>
+            <a class="text-primary p-2 btn btn-light m-2" href="{{ path('menu_index') }}">
+                <i class="fas fa-table mr-1"></i>
+                Menus
+            </a>
         </div>
         <div class="text-center mt-4 mb-5">
             <h1 class="text-break">On mange quoi c'soir ?</h1>
-            <p>Un menu, Une liste de courses</p>
+            <p>Un menu, une liste de courses.</p>
         </div>
         <div class="d-flex align-items-center justify-content-around mb-5">
-            <a class="btn btn-primary p-5" href="{{ path('menu_new') }}">Créer un menu</a>
+            <a class="btn btn-primary p-5" href="{{ path('menu_new') }}"><i class="fas fa-scroll mr-2"></i>Créer un menu</a>
         </div>
     </div>
 {% endblock %}
