--- a/templates/component/_navbar.html.twig
+++ b/templates/component/_navbar.html.twig
@@ -25,7 +25,10 @@
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link btn btn-light text-primary font-weight-bold p-3 m-3" href="{{ path('menu_new') }}"><i class="fas fa-scroll mr-2"></i>Créer un menu</a>
+                    <a class="nav-link btn btn-light text-primary font-weight-bold p-3 m-3" href="{{ path('menu_new') }}">
+                        <i class="fas fa-scroll mr-2"></i>
+                        Créer un menu
+                    </a>
                 </li>
             </ul>
         </div>
