--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -23,7 +23,10 @@
             <p>Un menu, une liste de courses.</p>
         </div>
         <div class="d-flex align-items-center justify-content-around mb-5">
-            <a class="btn btn-primary p-5" href="{{ path('menu_new') }}"><i class="fas fa-scroll mr-2"></i>Créer un menu</a>
+            <a class="btn btn-primary p-5" href="{{ path('menu_new') }}">
+                <i class="fas fa-scroll mr-2"></i>
+                Créer un menu
+            </a>
         </div>
     </div>
 {% endblock %}
