--- a/templates/shopping_list/index.html.twig
+++ b/templates/shopping_list/index.html.twig
@@ -9,7 +9,7 @@
         {% for ingredient, quantity in ingredients %}
             <div>
                 <input type="checkbox" id="{{ ingredient }}">
-                <label class="text-dark font-weight-bold" for="{{ ingredient }}">{{ ingredient }} x {{ quantity }} </label>
+                <label class="shopping-list-item text-dark font-weight-bold" for="{{ ingredient }}">{{ ingredient }} x {{ quantity }}</label>
             </div>
         {% endfor %}
     </div>
