--- a/templates/aliment/index.html.twig
+++ b/templates/aliment/index.html.twig
@@ -6,7 +6,8 @@
     <h3 class="text-center my-4">Liste des aliments</h3>
     <div class="text-center">
         <a class="btn btn-primary my-4" href="{{ path('aliment_new') }}">Ajouter un nouvel aliment</a>
-        <a class="btn btn-primary my-4" href="{{ path('category_index') }}">Voir les catégories d'aliment</a>
+        <a class="btn btn-primary my-4" href="{{ path('category_index') }}">Gérer les catégories d'aliment</a>
+        <a class="btn btn-primary my-4" href="{{ path('unit_index') }}">Gérer les unités de mesure</a>
     </div>
     <div class="container m-0 p-0 mx-auto">
         <div class="row m-0 p-0 justify-content-center text-center">
