--- a/templates/aliment/index.html.twig
+++ b/templates/aliment/index.html.twig
@@ -8,6 +8,7 @@
         <a class="btn btn-primary my-4" href="{{ path('aliment_new') }}">Ajouter un nouvel aliment</a>
         <a class="btn btn-primary my-4" href="{{ path('category_index') }}">Gérer les catégories d'aliment</a>
         <a class="btn btn-primary my-4" href="{{ path('unit_index') }}">Gérer les unités de mesure</a>
+        <a class="btn btn-primary my-4" href="{{ path('shopplace_index') }}">Gérer les lieux d'achats</a>
     </div>
     <div class="container m-0 p-0 mx-auto">
         <div class="row m-0 p-0 justify-content-center text-center">
