improve date choice for new season

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -11,3 +11,4 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import "recipe-index";
 @import "recipe-show";
 @import "shopping-list";
+@import "season-new";
