--- a/templates/season/index.html.twig
+++ b/templates/season/index.html.twig
@@ -11,7 +11,7 @@
         <div class="row m-0 p-0 justify-content-center text-center">
             {% for season in seasons %}
                 <div class="col-12 col-md-5 border rounded-lg m-2 p-2 d-flex flex-column">
-                    <h6 class="text-center">{{ season.name }}</h6>
+                    <h6 class="text-center">{{ season.name }} - (du {{ season.startDate|format_datetime(locale='fr',pattern="dd MMMM")  }} au {{ season.endDate|format_datetime(locale='fr',pattern="dd MMMM")  }})</h6>
                         </p>
                         <form action="{{ path('season_edit', {'id': season.id}) }}" method="post" class="ml-3">
                             <button class="btn btn-secondary">📝</button>
@@ -20,7 +20,6 @@
                             <button class="btn btn-secondary">🗑</button>
                         </form>
                     </div>
-                </div>
             {% endfor %}
         </div>
     </div>
