--- a/templates/aliment/new.html.twig
+++ b/templates/aliment/new.html.twig
@@ -12,6 +12,7 @@
         {{ form_row(form.name) }}
         {{ form_row(form.category) }}
         {{ form_row(form.unit) }}
+        {{ form_row(form.shopPlace) }}
         <div class="text-center"><input class="btn btn-primary" type="submit" value="{% block text_button %}Ajouter{% endblock %}"></div>
         {{ form_end(form) }}
     </div>
