--- a/templates/menu/show.html.twig
+++ b/templates/menu/show.html.twig
@@ -13,9 +13,11 @@
         <div class="d-flex flex-column alert alert-primary mx-1">
             {% for shift in menu.shifts|slice( nb_jours * 2, constant('App\\Entity\\Menu::NB_SHIFT_PER_DAY'))  %}
                 <div class="p-3 my-1 alert alert-light text-center">
-                    {% if shift.recipe %}
+                    {% if shift.recipes is not empty %}
                         <div class="font-weight-bold mb-2">{{ shift.identifier }}</div>
-                        <a href="{{ path('recipe_show', {'id': shift.recipe.id}) }}">{{ shift.recipe.title }}</a>
+                        {% for recipe in shift.recipes %}
+                            <a href="{{ path('recipe_show', {'id': recipe.id}) }}">{{ recipe.title }}</a>
+                        {% endfor %}
                         <p class="mt-3">pour {{ shift.peopleCount }} personnes</p>
                     {% else %}
                         <div class="font-weight-bold">{{ shift.identifier }}</div>
