--- a/templates/recipe/new.html.twig
+++ b/templates/recipe/new.html.twig
@@ -15,6 +15,8 @@
         {{ form_start(form) }}
         <div class="form-box">
             {{ form_row(form.title) }}
+            {{ form_row(form.recipeType) }}
+            {{ form_row(form.season) }}
             {{ form_row(form.description) }}
             <ul id="ingredients-container" class="ingredients" data-prototype="{{ form_widget(form.ingredients.vars.prototype)|e('html_attr') }}">
                 {% for ingredient in form.ingredients %}
