--- a/templates/menu/show.html.twig
+++ b/templates/menu/show.html.twig
@@ -13,12 +13,12 @@
         <div class="d-flex flex-column alert alert-primary mx-1">
             {% for shift in menu.shifts|slice( nb_jours * 2, constant('App\\Entity\\Menu::NB_SHIFT_PER_DAY'))  %}
                 <div class="p-3 my-1 alert alert-light text-center">
-                    {% if shift.recipes is not empty %}
+                    {% if shift.dishes is not empty %}
                         <div class="font-weight-bold mb-2">{{ shift.identifier }}</div>
-                        {% for recipe in shift.recipes %}
-                            <a href="{{ path('recipe_show', {'id': recipe.id}) }}">{{ recipe.title }}</a>
+                        {% for dish in shift.dishes %}
+                            <a href="{{ path('recipe_show', {'id': dish.recipe.id}) }}">{{ dish.recipe.title }}</a>
+                            <p class="mt-3">pour {{ dish.peopleCount }} personnes</p>
                         {% endfor %}
-                        <p class="mt-3">pour {{ shift.peopleCount }} personnes</p>
                     {% else %}
                         <div class="font-weight-bold">{{ shift.identifier }}</div>
                         <p>---</p>
