--- a/templates/recipe/new.html.twig
+++ b/templates/recipe/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouvelle Recette{% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    {{ encore_entry_script_tags('form') }}
+    {{ encore_entry_script_tags('ingredientEmbedForm') }}
 {% endblock %}
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 {% block body %}
