--- a/templates/menu/show.html.twig
+++ b/templates/menu/show.html.twig
@@ -8,24 +8,29 @@
     <div class="text-center my-3">
         <a class="btn btn-primary" href="{{ path('shoppingList', {'menu_id': menu.id}) }}">Générer la liste de courses</a>
     </div>
+
     <div class="d-flex flex-wrap justify-content-center">
-    {% for nb_jours in 0..days_count %}
-        <div class="d-flex flex-column alert alert-primary mx-1">
-            {% for shift in menu.shifts|slice( nb_jours * 2, constant('App\\Entity\\Menu::NB_SHIFT_PER_DAY'))  %}
-                <div class="p-3 my-1 alert alert-light text-center">
-                    {% if shift.dishes is not empty %}
-                        <div class="font-weight-bold mb-2">{{ shift.identifier }}</div>
-                        {% for dish in shift.dishes %}
-                            <a href="{{ path('recipe_show', {'id': dish.recipe.id}) }}">{{ dish.recipe.title }}</a>
-                            <p class="mt-3">pour {{ dish.peopleCount }} personnes</p>
-                        {% endfor %}
-                    {% else %}
-                        <div class="font-weight-bold">{{ shift.identifier }}</div>
-                        <p>---</p>
-                    {% endif %}
+    {% for week,shifts in menu.shiftsInWeeks %}
+        <div class="d-flex justify-content-center">
+            {% for nb_jours in 0..(constant('App\\Entity\\Menu::WEEK_COUNT_DAYS')-1) %}
+                <div class="d-flex flex-column alert alert-primary mx-1">
+                    {% for shift in shifts|slice( nb_jours * 2, constant('App\\Entity\\Menu::NB_SHIFT_PER_DAY'))  %}
+                        <div class="p-3 my-1 alert alert-light text-center">
+                            {% if shift.dishes is not empty %}
+                                <div class="font-weight-bold mb-2">{{ shift.identifier }}</div>
+                                {% for dish in shift.dishes %}
+                                    <a href="{{ path('recipe_show', {'id': dish.recipe.id}) }}">{{ dish.recipe.title }}</a>
+                                    <p class="mt-3">pour {{ dish.peopleCount }} personnes</p>
+                                {% endfor %}
+                            {% else %}
+                                <div class="font-weight-bold">{{ shift.identifier }}</div>
+                                <p>---</p>
+                            {% endif %}
+                        </div>
+                    {% endfor %}
                 </div>
             {% endfor %}
         </div>
     {% endfor %}
-    </div>
+    <div>
 {% endblock %}
