--- a/templates/menu/show.html.twig
+++ b/templates/menu/show.html.twig
@@ -11,26 +11,33 @@
 
     <div class="d-flex flex-wrap justify-content-center">
     {% for week,shifts in menu.shiftsInWeeks %}
+
         <div class="d-flex justify-content-center">
             {% for nb_jours in 0..(constant('App\\Entity\\Menu::WEEK_COUNT_DAYS')-1) %}
-                <div class="d-flex flex-column alert alert-primary mx-1">
-                    {% for shift in shifts|slice( nb_jours * 2, constant('App\\Entity\\Menu::NB_SHIFT_PER_DAY'))  %}
-                        <div class="p-3 my-1 alert alert-light text-center">
-                            {% if shift.dishes is not empty %}
-                                <div class="font-weight-bold mb-2">{{ shift.identifier }}</div>
-                                {% for dish in shift.dishes %}
-                                    <a href="{{ path('recipe_show', {'id': dish.recipe.id}) }}">{{ dish.recipe.title }}</a>
-                                    <p class="mt-3">pour {{ dish.peopleCount }} personnes</p>
-                                {% endfor %}
-                            {% else %}
-                                <div class="font-weight-bold">{{ shift.identifier }}</div>
-                                <p>---</p>
-                            {% endif %}
-                        </div>
-                    {% endfor %}
-                </div>
+                {% set to_display_shifts = shifts|slice( nb_jours * 2, constant('App\\Entity\\Menu::NB_SHIFT_PER_DAY')) %}
+                {% if to_display_shifts|length >= 1 %}
+                    <div class="d-flex flex-column alert alert-primary mx-1">
+                        {% for shift in to_display_shifts  %}
+                            <div class="p-3 my-1 alert alert-light text-center">
+                                {% if shift.dishes is not empty %}
+                                    <div class="font-weight-bold mb-2">{{ shift.identifier }}</div>
+                                    {% for dish in shift.dishes %}
+                                        <a href="{{ path('recipe_show', {'id': dish.recipe.id}) }}">{{ dish.recipe.title }}</a>
+                                        <p class="mt-3">pour {{ dish.peopleCount }} personnes</p>
+                                    {% endfor %}
+                                {% else %}
+                                    <div class="font-weight-bold">{{ shift.identifier }}</div>
+                                    <p> --- </p>
+                                {% endif %}
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+
+
             {% endfor %}
         </div>
+
     {% endfor %}
     <div>
 {% endblock %}
