LIST ITEM adding entity

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -12,3 +12,4 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import "recipe-show";
 @import "shopping-list";
 @import "season-new";
+@import "menu-new";
